# hamming

./: CMakeLists.txt  README.md  main.cpp
header/: hamming.h
src/: hamming.cpp
